app-c/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-c
  name: service-c
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: app-c
  sessionAffinity: None
  type: ClusterIP
