app-c/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app-c
  name: app-c
spec:
  port:
    targetPort: http
  to:
    kind: "Service"
    name: service-c
    weight: null
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
